<resources>
    <string name="app_name">PoolTool</string>
    <string name="player_name">Name</string>
    <string name="potted_s">P</string>
    <string name="potted">Potted</string>
    <string name="missed_s">M</string>
    <string name="missed">Missed</string>
    <string name="fouled_s">F</string>
    <string name="fouled">Fouled</string>
    <string name="date">Date</string>
    <string name="rate">Rate</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="reset_score">Reset the score for all players?</string>
    <string name="update_record">Update the record for this player?</string>
    <string name="info">Info</string>
    <string name="delete">Delete the data for this player?</string>
    <string name="save">Save the data for this player?</string>
    <string name="ratio">(%1$d/%2$d/%3$d) </string>
    <string name="rate_and_ratio">%1s (%2$d/%3$d) </string>
    <string name="potted_record">Potted: %1$d</string>
    <string name="missed_record">Missed: %1$d</string>
    <string name="fouled_record">Fouled: %1$d</string>
    <string name="double_click_to_exit">Double click to exit</string>
</resources>
