<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btSave"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/save" />

        <ImageButton
            android:id="@+id/btReset"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/refresh" />

        <ImageButton
            android:id="@+id/btAdd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/friend"
            android:padding="4dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/player_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/potted" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/missed" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/rate" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />


</LinearLayout>